[package]
name = "coin-info"
version = "0.1.0"
authors = ["Tom Craven <tom.cass.craven@gmail.com>"]

[dependencies]
termion = { git = "https://github.com/ticki/termion" }
tui = { git = "https://github.com/fdehau/tui-rs" }
structopt = "0.1.0"
structopt-derive = "0.1.0"
reqwest = "*"
serde = "1.0"
serde_json = "1.0.0"
serde_derive = "1.0.25"